syntax="proto3";
package services;
option go_package ="./;pb";

message UserModel{
  uint64 id=1;
  string name=2;
  string address=3;
}

message PostModel{
  uint64 id=1;
  string author_addr=2;
  string content=3;
}

message PostCreateRequest{
  string author_addr=1;
  string content=2;
}

message PostCreateResponse{
  PostModel post=1;
}

message GetPostsByAuthorRequest{
  string author_addr=1;
}

message GetPostsByAuthorResponse{
  repeated PostModel post=2;
}

message UserRegisterRequest{
  string name=1;
  string address=2;
}

message UserRegisterResponse{
  UserModel user=1;
}

message UserLoginRequest{
  string address=1;
}

message UserLoginResponse{
  UserModel user=1;
}


service UserService{
  rpc UserLogin(UserLoginRequest) returns(UserLoginResponse);
  rpc UserRegister(UserRegisterRequest) returns(UserRegisterResponse);
  rpc CreatePost(PostCreateRequest) returns(PostCreateResponse);
  rpc GetPostsByAuthor(GetPostsByAuthorRequest) returns(GetPostsByAuthorResponse);
}
